Header part ready

--- a/index.html
+++ b/index.html
@@ -18,7 +18,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <!-- This is header part -->
+    <header>
+      <div class="header-container">
+        <div class="header-text">
+          <h1 class="header-headings">
+            Let's make beautiful flowers a part of your life.
+          </h1>
+          <p class="header-info">
+            The importance of flowers in our everyday life is to help convey the
+            best of our feelings and emotions towards someone in a way that no
+            other object can. If words are not enough. No
+            matter your feelings, flowers help you express your feelings
+            perfectly.
+          </p>
+          <button class="btn-primary">Shop Now</button>
+        </div>
+        <!-- <div class="header-image"> -->
+          <img
+            src="assets/pngwing 10.png"
+            alt="Flower Image"
+            class="header-img"
+          />
+        </div>
+      </div>
+    </header>
+    <!-- Header part end -->
     <main></main>
     <footer></footer>
   </body>
