some minor changes

--- a/index.html
+++ b/index.html
@@ -28,23 +28,27 @@
           <p class="header-info">
             The importance of flowers in our everyday life is to help convey the
             best of our feelings and emotions towards someone in a way that no
-            other object can. If words are not enough. No
-            matter your feelings, flowers help you express your feelings
-            perfectly.
+            other object can. If words are not enough. No matter your feelings,
+            flowers help you express your feelings perfectly.
           </p>
           <button class="btn-primary">Shop Now</button>
         </div>
-        <!-- <div class="header-image"> -->
-          <img
-            src="assets/pngwing 10.png"
-            alt="Flower Image"
-            class="header-img"
-          />
-        </div>
+        <img
+          src="assets/pngwing 10.png"
+          alt="Flower Image"
+          class="header-img"
+        />
       </div>
     </header>
     <!-- Header part end -->
-    <main></main>
+    <main>
+        <section>
+            <!-- This is section no one -->
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
     <footer></footer>
   </body>
 </html>
