section one-1st part complete

--- a/index.html
+++ b/index.html
@@ -42,12 +42,48 @@
     </header>
     <!-- Header part end -->
     <main>
-        <section>
-            <!-- This is section no one -->
-        </section>
-        <section></section>
-        <section></section>
-        <section></section>
+      <section>
+        <!-- This is number one section-->
+        <!-- Part one -->
+        <div class="featured-text">
+          <h1 class="featured-title">Our Featured Flowers</h1>
+          <p class="featured-info">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
+        </div>
+        <div class="flower-tree-container">
+        <div class="flower-tree-boxes">
+          <div class="flower-tree-box1">
+            <img
+              src="assets/pngwing 6.png"
+              alt="Flower tree 1"
+              class="flower-tree-1"
+            />
+            <h5 class="flower-tree-name">Pink Flower Tree</h5>
+          </div>
+          <div class="flower-tree-box2">
+            <img
+              src="assets/pngwing 5.png"
+              alt="Flower tree 2"
+              class="flower-tree-2"
+            />
+            <h5 class="flower-tree-name">Blue Flower Tree</h5>
+          </div>
+          <div class="flower-tree-box3">
+            <img
+              src="assets/pngwing 7.png"
+              alt="Flower tree 3"
+              class="flower-tree-3"
+            />
+            <h5 class="flower-tree-name">Green Flower Tree</h5>
+          </div>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
     <footer></footer>
   </body>
