section one-2nd part complete

--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
             <h5 class="flower-tree-name">Green Flower Tree</h5>
           </div>
         </div>
+        <!-- part two -->
+        <div class="service-container">
+            <div class="service-type">
+                <img src="assets/Group 57.png" alt="icon 1" class="service-icon">
+                <p class="service-text">Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="service-type">
+                <img src="assets/Group 58.png" alt="icon 2" class="service-icon">
+                <p class="service-text">Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="service-type">
+                <img src="assets/Group 59.png" alt="icon 3" class="service-icon">
+                <p class="service-text">24/7 Feel Free to contact with us .</p>
+            </div>
+        </div>
       </section>
       <section></section>
       <section></section>
