Hot deal section complete

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Header part end -->
     <main>
       <section>
-        <!-- This is number one section-->
+        <!-- This is first section-->
         <!-- Part one -->
         <div class="featured-text">
           <h1 class="featured-title">Our Featured Flowers</h1>
@@ -96,7 +96,21 @@
             </div>
         </div>
       </section>
-      <section></section>
+      <section>
+<!-- This is second section -->
+<div class="deal-container">
+  <div class="hot-deal">
+    <div class="deal-heading">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </div>
+    <p class="deal-para">
+    It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+    </p>
+    <button class="btn-primary">Sign Up</button>
+  </div>
+  <div class="hot-image">
+    <img src="./assets/pngwing 8.png" alt="Flower Stick" class="hot-img">
+  </div>
+</div>
+      </section>
       <section></section>
       <section></section>
     </main>
