section three-1st part complete

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!-- This is first section-->
         <!-- Part one -->
         <div class="featured-text">
-          <h1 class="featured-title">Our Featured Flowers</h1>
-          <p class="featured-info">
+          <h1 class="primary-title">Our Featured Flowers</h1>
+          <p class="primary-para">
             It is a long established fact that a reader will be distracted by
             the readable <br />
             content of a page when looking at its layout.
@@ -98,20 +98,37 @@
       </section>
       <section>
 <!-- This is second section -->
-<div class="deal-container">
-  <div class="hot-deal">
-    <div class="deal-heading">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </div>
-    <p class="deal-para">
-    It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
-    </p>
-    <button class="btn-primary">Sign Up</button>
-  </div>
-  <div class="hot-image">
-    <img src="./assets/pngwing 8.png" alt="Flower Stick" class="hot-img">
-  </div>
-</div>
+        <div class="deal-container">
+          <div class="hot-deal">
+           <div class="deal-heading">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </div>
+            <p class="deal-para">
+            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+            </p>
+            <button class="btn-primary">Sign Up</button>
+           </div>
+           <div class="hot-image">
+            <img src="./assets/pngwing 8.png" alt="Flower Stick" class="hot-img">
+           </div>
+        </div>
       </section>
-      <section></section>
+      <section>
+        <!-- This is third section -->
+        <!-- first part -->
+        <div class="social-network-container">
+          <div class="instagram">
+            <div class="primary-title">Instagram</div>
+            <p class="primary-info">It is a long established fact that a reader will be distracted by the readable <br>
+               content of a page when looking at its layout.</p>
+            <div class="instagram-image">
+                <img src="./assets/Flower 01.png" alt="Instagram Image 1" class="instagram-img">
+                <img src="./assets/Rectangle 4.png" alt="Instagram Image 2" class="instagram-img">
+                <img src="./assets/Rectangle 5.png" alt="Instagram Image 3" class="instagram-img">
+                <img src="./assets/Rectangle 6.png" alt="Instagram Image 4" class="instagram-img">
+               </div>
+            </div>
+          <div class="subscribe"></div>
+        </div>
+      </section>
       <section></section>
     </main>
     <footer></footer>
