section three-2nd part some modification needed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h5 class="flower-tree-name">Green Flower Tree</h5>
           </div>
         </div>
-        <!-- part two -->
+        <!-- Part two -->
         <div class="service-container">
             <div class="service-type">
                 <img src="assets/Group 57.png" alt="icon 1" class="service-icon">
@@ -100,8 +100,8 @@
 <!-- This is second section -->
         <div class="deal-container">
           <div class="hot-deal">
-           <div class="deal-heading">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </div>
-            <p class="deal-para">
+           <h1 class="primary-title">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </h1>
+            <p class="primary-para">
             It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
             </p>
             <button class="btn-primary">Sign Up</button>
@@ -113,11 +113,11 @@
       </section>
       <section>
         <!-- This is third section -->
-        <!-- first part -->
+        <!-- Part one -->
         <div class="social-network-container">
           <div class="instagram">
-            <div class="primary-title">Instagram</div>
-            <p class="primary-info">It is a long established fact that a reader will be distracted by the readable <br>
+            <h1 class="primary-title">Instagram</h1>
+            <p class="primary-para">It is a long established fact that a reader will be distracted by the readable <br>
                content of a page when looking at its layout.</p>
             <div class="instagram-image">
                 <img src="./assets/Flower 01.png" alt="Instagram Image 1" class="instagram-img">
@@ -126,8 +126,20 @@
                 <img src="./assets/Rectangle 6.png" alt="Instagram Image 4" class="instagram-img">
                </div>
             </div>
-          <div class="subscribe"></div>
+        <!-- Part two -->
+        <div class="subscribe-container">
+          <di class="sub-container">
+            <div class="sub-text">
+              <h1 class="primary-title">Get The Latest Deals</h1>
+            </div>
+            <div class="sub-para">
+              <p class="primary-para">$30 coupon for first shopping</p>
+            </div>
+              <input type="email" name="email" id="email" placeholder="Enter your email here....">
+              <button class="btn-primary">Subscribe</button>
+          </div>
         </div>
+       </div>
       </section>
       <section></section>
     </main>
