--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
       </section>
       <section></section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <h1 class="primary-title"><span class="red-font">Flower</span><span class="white-font">Shop</span></h1>
+        <p class="primary-para white-font">It is a long established fact that a reader will be distracted by the readable <br>
+           content of a page when looking at its layout.</p>
+           <small class="small-text">
+            @2020-2023, FlowerShop.com. All rights reserved. 
+           </small>
+      </div>
+    </footer>
   </body>
 </html>
