section three-2nd part complete

--- a/index.html
+++ b/index.html
@@ -126,22 +126,55 @@
                 <img src="./assets/Rectangle 6.png" alt="Instagram Image 4" class="instagram-img">
                </div>
             </div>
+            </div>
         <!-- Part two -->
         <div class="subscribe-container">
-          <di class="sub-container">
-            <div class="sub-text">
-              <h1 class="primary-title">Get The Latest Deals</h1>
-            </div>
-            <div class="sub-para">
+              <h1 class="primary-title deals-title">Get The Latest Deals</h1>
               <p class="primary-para">$30 coupon for first shopping</p>
-            </div>
-              <input type="email" name="email" id="email" placeholder="Enter your email here....">
+              <div class="subscribe">
+                <input type="email" name="email" id="email" placeholder="Enter your email here....">
               <button class="btn-primary">Subscribe</button>
-          </div>
-        </div>
+              </div>
+          <!-- </div> -->
+        
        </div>
       </section>
-      <section></section>
+      <section>
+        <!-- Extra section -->
+        <div class="floral-container">
+          <h1 class="primary-title">Floral Arrangements</h1>
+          <p class="primary-para">Our floral arrangements are available during the spring/summer seasons. The flowers <br>
+            included in our bouquets change weekly based on our local farm supply, so be sure to <br> 
+            check back often for different arrangements!
+          </p>
+          <div class="floral boxes">
+        <div class="floral-boxes-1">
+          <div class="floral-box">
+            <img src="./assets/floral/Rectangle 4.png" alt="" class="floral-img">
+            <h5 class="text">“THE HONEY B” <br> MINI ARRANGEMENT</h5>
+            <div class="para">$10.00</div>
+          </div>
+          <div class="floral-box">
+            <img src="./assets/floral/Rectangle 5.png" alt="" class="floral-img">
+            <h5 class="text">“THE EMBER” <br> SMALL ARRANGEMENT</h5>
+            <div class="para">$20.00</div>
+          </div>
+        </div>
+        <div class="floral-boxes-2">
+          <div class="floral-box">
+            <img src="./assets/floral/Rectangle 6.png" alt="" class="floral-img">
+            <h5 class="text">“THE OLLIE" <br> MEDIUM ARRANGEMENT</h5>
+            <div class="para">$30.00</div>
+          </div>
+          <div class="floral-box">
+            <img src="./assets/floral/Rectangle 7.png" alt="" class="floral-img">
+            <h5 class="text">“THE HENNA” <br> LARGE ARRANGEMENT</h5>
+            <div class="para">$50.00</div>
+          </div>
+        </div>
+        </div>
+      </div>
+      </section>
     </main>
     <footer>
       <div class="footer-container">
