full assignment completed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Flower Shop</title>
     <link
       rel="shortcut icon"
-      href="./assets/Flower 01.png"
+      href="./assets/lotus-flower.png"
       type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -113,6 +113,16 @@
       </section>
       <section>
         <!-- Extra section -->
+        <div class="gift-boxes">
+          <h1 class="primary-title">Gift Boxes</h1>
+          <p class="primary-para">Our gift boxes are available during the fall/winter seasons. All gift boxes are carefully <br> curated, containing products from our local/small business partners. 
+          </p>
+          <div class="gift-box-container">
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
+          </div>
+        </div>
         <div class="floral-container">
           <h1 class="primary-title">Floral Arrangements</h1>
           <p class="primary-para">Our floral arrangements are available during the spring/summer seasons. The flowers <br>
