This is final push

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- This is header part -->
+    <!-- This is header section -->
     <header>
       <div class="header-container">
         <div class="header-text">
@@ -98,13 +98,13 @@
       </section>
       <section>
 <!-- This is second section -->
-        <div class="deal-container">
+        <div class="hot-deal-container">
           <div class="hot-deal">
            <h1 class="primary-title">Hot Deal ! Sale Up To 25% <span class="red-font">Off</span> </h1>
             <p class="primary-para">
             It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
             </p>
-            <button class="btn-primary">Sign Up</button>
+            <button class="btn-primary hot-btn">Sign Up</button>
            </div>
            <div class="hot-image">
             <img src="./assets/pngwing 8.png" alt="Flower Stick" class="hot-img">
