full & final #Project completed

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
           <p class="primary-para">Our gift boxes are available during the fall/winter seasons. All gift boxes are carefully <br> curated, containing products from our local/small business partners. 
           </p>
           <div class="gift-box-container">
-            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
-            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
-            <div class="gift-box"><img src="./assets/gift01.jpg" alt="" class="gift"></div>
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="Gift Box" class="gift"></div>
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="Gift Box" class="gift"></div>
+            <div class="gift-box"><img src="./assets/gift01.jpg" alt="Gift Box" class="gift"></div>
           </div>
         </div>
         <div class="floral-container">
